TPort 1.18.2
        /*
         * changelog 1.18.2 update:
         *
         * TPort now supports translations. A server can set a default language, every player can follow the server of select their own one.
         * When a server has not installed a language a player wants, they can set their language to 'custom'.
         * This way TPort does not translate any messages (for them), but lets their Minecraft do it. The player must use a TPort Language Resource Pack,
         * this works the same as selecting a texture/resource pack. Now TPort is translatable in any language anyone wants (not restricted by the server).
         * commands:
         *  /tport language server [language]
         *  /tport language get
         *  /tport language set custom
         *  /tport language set server
         *  /tport language set <server language>
         *  /tport language repair <language> [repair with]
         *  /tport language test <id>
         *
         * Changed FeatureTP (now works with Minecraft 1.18.2)
         *  /tport featureTP search <feature> [mode] -> /tport featureTP search [mode] <feature...>
         *  You can search for multiple features at the same time
         *  The Taglists from Minecraft can be used
         *
         * Changed BiomeTP
         *  When the TPort version supports the Minecraft version (no legacy support):
         *      - tab completes only shows the biomes that are generated in the world the player is in
         *      - BiomeTP GUI only shows the biomes that are generated in the world the player is in
         *      - The Taglists from Minecraft are added to the Presets
         *  When an error occurs BiomeTP Legacy support is turned on
         *
         * Removed converting functions. If you are upgrading to 1.18.2 (or higher) from a version lower than 1.15.3 you need to install 1.16.2 first.
         * you could suffer from data loss if you upgrade to 1.18.2 (or higher) from a version lower than 1.15.3
      