@@ -1,14 +1,15 @@
 package com.spaceman.tport;
 
-import com.spaceman.tport.commandHander.ArgumentType;
-import com.spaceman.tport.commandHander.EmptyCommand;
+import com.spaceman.tport.commandHandler.ArgumentType;
+import com.spaceman.tport.commandHandler.EmptyCommand;
 import com.spaceman.tport.commands.TPortCommand;
 import com.spaceman.tport.commands.tport.Tag;
 import com.spaceman.tport.commands.tport.*;
 import com.spaceman.tport.commands.tport.backup.Auto;
+import com.spaceman.tport.commands.tport.biomeTP.Accuracy;
 import com.spaceman.tport.dynmap.DynmapHandler;
 import com.spaceman.tport.events.*;
-import com.spaceman.tport.fancyMessage.Message;
+import com.spaceman.tport.fancyMessage.inventories.FancyClickEvent;
 import com.spaceman.tport.fancyMessage.colorTheme.ColorTheme;
 import com.spaceman.tport.fancyMessage.colorTheme.MultiColor;
 import com.spaceman.tport.fileHander.Files;
@@ -19,25 +20,23 @@ import com.spaceman.tport.metrics.FeatureSearchCounter;
 import com.spaceman.tport.metrics.Metrics;
 import com.spaceman.tport.permissions.PermissionHandler;
 import com.spaceman.tport.playerUUID.PlayerUUID;
-import com.spaceman.tport.searchAreaHander.SearchAreaHandler;
 import com.spaceman.tport.tpEvents.ParticleAnimation;
 import com.spaceman.tport.tpEvents.TPEManager;
 import com.spaceman.tport.tpEvents.TPRestriction;
 import com.spaceman.tport.tpEvents.animations.ExplosionAnimation;
 import com.spaceman.tport.tpEvents.animations.SimpleAnimation;
+import com.spaceman.tport.tpEvents.restrictions.InteractRestriction;
 import com.spaceman.tport.tpEvents.restrictions.NoneRestriction;
+import com.spaceman.tport.tpEvents.restrictions.DoSneakRestriction;
 import com.spaceman.tport.tpEvents.restrictions.WalkRestriction;
 import com.spaceman.tport.tport.TPort;
 import com.spaceman.tport.tport.TPortManager;
 import org.apache.commons.lang.StringUtils;
 import org.bukkit.*;
 import org.bukkit.block.Biome;
-import org.bukkit.block.Block;
-import org.bukkit.block.data.type.Slab;
 import org.bukkit.configuration.serialization.ConfigurationSerialization;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
-import org.bukkit.permissions.PermissionAttachmentInfo;
 import org.bukkit.plugin.PluginManager;
 import org.bukkit.plugin.java.JavaPlugin;
 
@@ -51,14 +50,22 @@ import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 import static com.spaceman.tport.commands.TPortCommand.getHead;
-import static com.spaceman.tport.fancyMessage.TextComponent.textComponent;
-import static com.spaceman.tport.fancyMessage.colorTheme.ColorTheme.ColorType.infoColor;
-import static com.spaceman.tport.fancyMessage.colorTheme.ColorTheme.sendErrorTheme;
+import static com.spaceman.tport.fancyMessage.colorTheme.ColorTheme.formatInfoTranslation;
+import static com.spaceman.tport.fancyMessage.colorTheme.ColorTheme.sendErrorTranslation;
 
 public class Main extends JavaPlugin {
     
     public static <O> O getOrDefault(@Nullable O object, O def) {
         return object == null ? def : object;
+    }
+    
+    public static Object getOrDefaults(Object... objects) {
+        for (Object o : objects) {
+            if (o != null) {
+                return o;
+            }
+        }
+        return null;
     }
     
     public static Main getInstance() {
@@ -70,7 +77,7 @@ public class Main extends JavaPlugin {
         for (ItemStack item : player.getInventory().addItem(items.toArray(new ItemStack[0])).values()) {
             player.getWorld().dropItem(player.getLocation(), item);
             returnList.add(item);
-            sendErrorTheme(player, "Your inventory is full, dropped item %s on the ground", item.getType().name());
+            sendErrorTranslation(player, "tport.main.dropItem", item.getType().name());
         }
         return returnList;
     }
@@ -79,6 +86,7 @@ public class Main extends JavaPlugin {
         return giveItems(player, Arrays.asList(items));
     }
     
+    @SafeVarargs
     public static <I, J> HashMap<I, J> asMap(Pair<I, J>... pairs) {
         HashMap<I, J> map = new HashMap<>();
         for (Pair<I, J> pair : pairs) {
@@ -97,7 +105,7 @@ public class Main extends JavaPlugin {
         }
         World world;
         try {
-            world = Bukkit.getWorld(file.getConfig().getString(path + ".world"));
+            world = Bukkit.getWorld(file.getConfig().getString(path + ".world", ""));
         } catch (Exception e) {
             return null;
         }
@@ -128,7 +136,7 @@ public class Main extends JavaPlugin {
     public static ArrayList<String> getPlayerNames() {
         ArrayList<String> list = new ArrayList<>();
         Files tportData = GettingFiles.getFile("TPortData");
-        for (OfflinePlayer op : Bukkit.getOnlinePlayers()) {
+        for (OfflinePlayer op : Bukkit.getOfflinePlayers()) {
             if (tportData.getConfig().contains("tport." + op.getUniqueId())) {
                 list.add(op.getName());
             }
@@ -161,69 +169,183 @@ public class Main extends JavaPlugin {
         return text.replaceFirst("(?s)(.*)" + regex, "$1" + replacement);
     }
     
+    public static Rectangle getSearchArea(Player player) {
+        World world = player.getWorld();
+        Location center = world.getWorldBorder().getCenter();
+        int size = (int) world.getWorldBorder().getSize();
+        int halfSize = size / 2;
+        
+        return new Rectangle(center.getBlockX() - halfSize, center.getBlockZ() - halfSize, size, size);
+    }
+    
+    public static Location getRandomLocation(Player player) {
+        Random random = new Random();
+        Rectangle searchArea = getSearchArea(player);
+        return new Location(player.getWorld(), random.nextInt(searchArea.width) + searchArea.x, 0, random.nextInt(searchArea.height) + searchArea.y);
+    }
+    
+    public static Location getClosestLocation(Player player) {
+        Rectangle searchArea = getSearchArea(player);
+        
+        if (searchArea.contains(player.getLocation().getX(), player.getLocation().getZ())) {
+            return player.getLocation();
+        } else {
+            int currentX = player.getLocation().getBlockX();
+            int currentZ = player.getLocation().getBlockZ();
+            int newX = Math.min(Math.max(currentX, searchArea.x), searchArea.x + searchArea.width);
+            int newZ = Math.min(Math.max(currentZ, searchArea.y), searchArea.y + searchArea.height);
+            
+            return new Location(player.getLocation().getWorld(), newX, player.getLocation().getY(), newZ);
+        }
+    }
+    
+    public static Boolean toBoolean(String arg) {
+        return toBoolean(arg, null);
+    }
+    public static Boolean toBoolean(String arg, Boolean def) {
+        boolean t = isTrue(arg), f = isFalse(arg);
+        return (!t && !f) ? def : t;
+    }
+    
+    public static boolean isTrue(String arg) {
+        if (arg == null) return false;
+        arg = arg.toLowerCase();
+        return arg.equals("true") || arg.equals("yes") || arg.equals("y") || arg.equals("enable");
+    }
+    
+    public static boolean isFalse(String arg) {
+        if (arg == null) return false;
+        arg = arg.toLowerCase();
+        return arg.equals("false") || arg.equals("no") || arg.equals("n") || arg.equals("disable");
+    }
+    
+    @Override
+    public void onLoad() {
+    }
+    
     public void onEnable() {
         
         /*
-         * changelog 1.16.2 update:
+         * changelog 1.18.2 update:
          *
-         * Fixed that TPort wont start on servers that aren't Spigot
+         * TPort now supports translations. A server can set a default language, every player can follow the server of select their own one.
+         * When a server has not installed a language a player wants, they can set their language to 'custom'.
+         * This way TPort does not translate any messages (for them), but lets their Minecraft do it. The player must use a TPort Language Resource Pack,
+         * this works the same as selecting a texture/resource pack. Now TPort is translatable in any language anyone wants (not restricted by the server).
+         * commands:
+         *  /tport language server [language]
+         *  /tport language get
+         *  /tport language set custom
+         *  /tport language set server
+         *  /tport language set <server language>
+         *  /tport language repair <language> [repair with]
+         *  /tport language test <id>
+         *
+         * Changed FeatureTP (now works with Minecraft 1.18.2)
+         *  /tport featureTP search <feature> [mode] -> /tport featureTP search [mode] <feature...>
+         *  You can search for multiple features at the same time
+         *  The Taglists from Minecraft can be used
+         *
+         * Changed BiomeTP
+         *  When the TPort version supports the Minecraft version (no legacy support):
+         *      - tab completes only shows the biomes that are generated in the world the player is in
+         *      - BiomeTP GUI only shows the biomes that are generated in the world the player is in
+         *      - The Taglists from Minecraft are added to the Presets
+         *  When an error occurs BiomeTP Legacy support is turned on
+         *
+         * Removed converting functions. If you are upgrading to 1.18.2 (or higher) from a version lower than 1.15.3 you need to install 1.16.2 first.
+         * you could suffer from data loss if you upgrade to 1.18.2 (or higher) from a version lower than 1.15.3
+         *
+         * Improved some GUI's. Middle Click is now replaced by Shift Right Click. Only Creative players could use the Middle Click Button.
+         * In the future there will be more functions bind to other mouse clicks (like Shift Left Click)
+         *
+         * removed bug when you create a TPort you will get the error if you don't have permission to add a description when you aren't adding a description
+         * improved stability
+         * when a TPort is transferred, the old owner will now be automatically added to the whitelist
+         * fixed /tport edit <TPort name> whitelist add <player names...>
+         *
+         * changed /tport safetyCheck
+         *  new commands:
+         *   /tport safetyCheck
+         *   /tport safetyCheck <source> [state]
+         *   /tport safetyCheck check
+         *   /tport open <player> [TPort name] [safetyCheck]
+         *   /tport own [safetyCheck]
+         *   /tport home [safetyCheck]
+         *   /tport public open <TPort name> [safetyCheck]
+         * The source stands for the source of reason for teleportation. open, own, home and public is their own source.
+         * This way you can set the default state for each command
+         * '/tport safetyCheck check' is to check if the location you are at is considered safe by the safety checker
+         *
+         * added/changed TPort private settings:
+         *  OFF -> OPEN. better name for its function
+         *  ON -> PRIVATE. better name for its function
+         *  + CONSENT_PRIVATE. when the owner is online players must get consent of owner, when the owner is offline the TPort goes to PRIVATE
+         *  + CONSENT_CLOSE. when the owner is online players in the whitelist can ask for consent to teleport, when the owner is offline the TPort closes
+         * for CONSENT settings some commands where added, these work the same as the ones for PLTP:
+         *  /tport requests
+         *  /tport requests accept [player...]
+         *  /tport requests reject [player...]
+         *  /tport requests revoke
+         * '/tport requests' now handles all the teleportation requests, from PLTP and normal TPort teleportation.
+         *   As of now you only can have only one request (to a player with PLTP or to a TPort)
+         *
+         * You are now able to log yourself.
+         *  To start: /tport log add <TPort name> YourName:[ALL|ONLINE]
+         *  To stop:  /tport log add <TPort name> YourName:[NONE|OFFLINE]
+         *            /tport log remove <TPort name> YourName
+         *
+         * changed '/tport redirect <redirect> [state]' to '/tport redirect [redirect] [state]'
+         *
+         * added /tport features [feature] state [state]
+         * This command allows you to enable/disable features without the use of permissions
+         * /tport metrics enable [state]     -> /tport features Metrics state [state]
+         * /tport permissions enable [state] -> /tport features Permissions state [state]
+         * /tport dynmap enable [state]      -> /tport features Dynmap state [state]
+         *
+         * added /tport edit <tport name> whitelist visibility [state]
+         * This command is used to control the visibility of the whitelist of a TPort in chat and GUI
+         *
+         * When a TPort is selected to move in your TPort GUI, dummy items will appear in the GUI at the empty slots to move that TPort to an empty slot
+         *
+         * fixed usage of permissions in the cooldown configuration. The permission now support linking other cooldown.
+         *
+         * added the tp restriction 'interactRestriction'. Players with this restriction can't interact with the world while a TP is pending
+         * added the tp restriction 'doSneakRestriction'. Players with this restriction have to sneak at least once while a TP is pending (This restriction is more of a concept for creating your own)
+         *
+         * TPort now should start when it's not run from a Spigot server
          */
         
         /*
-         * todo
-         * remove converting methods (next update)
+         * //todo
          *
-         * update biome search system
+         * add command syntax detection (check length, ect), and set permission after syntax detection
+         * unify EmptyCommand names
+         *
+         * unify getPlayer in commands
+         *
+         * /tport preview <player> <TPort name>
          *
          * /tport sort [popularity]
          *  create popularity system for /tport sort popularity
          *
-         * /tport featureTP searchTries [tries]
-         * /tport biomeTP mode [mode]
-         *
-         * /tport searchArea set <type>
-         * /tport searchArea get
-         * /tport searchArea configure [data...]
-         * /tport searchArea show <world>
-         * /tport searchArea description <type>
-         *
-         * polygon:     tport searchArea configure <world> <corner> set <x> <z>
-         *              tport searchArea configure <world> <corner> get
-         *              tport searchArea configure <world> <corner> remove
-         * permission:  tport searchArea configure
-         * worldBorder: tport searchArea configure
-         *
-         * Permissions
-         * TPort.searchArea.subType.<type> {polygon or worldBorder}
-         *
-         * Polygon permissions:
-         * TPort.searchArea.data.<world>.<corner>.x.<x>
-         * TPort.searchArea.data.<world>.<corner>.z.<z>
-         *
-         * worldBorder permissions:
-         * N/A
-         *
-         *
-         *
-         * fix /tport reload
-         *
-         *
-         *
          * update /tport version compatible Bukkit versions
          * create tutorial for creating your own Particle Animations and TP Restrictions
          * */
+        
         ConfigurationSerialization.registerClass(ColorTheme.class, "ColorTheme");
-        ConfigurationSerialization.registerClass(com.spaceman.tport.colorFormatter.ColorTheme.class, "ColorTheme");
         ConfigurationSerialization.registerClass(TPort.class, "TPort");
         ConfigurationSerialization.registerClass(Pair.class, "Pair");
         ConfigurationSerialization.registerClass(MultiColor.class, "MultiColor");
-        
-        Reload.reloadTPort();
-        
+    
         ParticleAnimation.registerAnimation(SimpleAnimation::new);
         ParticleAnimation.registerAnimation(ExplosionAnimation::new);
         TPRestriction.registerRestriction(NoneRestriction::new);
         TPRestriction.registerRestriction(WalkRestriction::new);
+        TPRestriction.registerRestriction(InteractRestriction::new);
+        TPRestriction.registerRestriction(DoSneakRestriction::new);
+        
+        Reload.reloadTPort();
         
         SafetyCheck.setSafetyCheck((feet) -> {
             
@@ -252,55 +374,38 @@ public class Main extends JavaPlugin {
         
         registerBiomeTPPresets();
         
-        TPEManager.loadTPE(GettingFiles.getFile("TPortConfig"));
-        
-        ColorTheme.loadThemes(GettingFiles.getFile("TPortConfig"));
-        
-        Redirect.Redirects.loadRedirects();
-        
         Glow.registerGlow();
         
-        Tag.loadTags();
+        Features.convert();
         
-        new TPortCommand();
+        TPortCommand.getInstance().register();
         
         PluginManager pm = getServer().getPluginManager();
-        pm.registerEvents(new InventoryClick(), this);
         pm.registerEvents(new TeleporterEvents(), this);
         pm.registerEvents(new JoinEvent(), this);
         pm.registerEvents(new RespawnEvent(), this);
         pm.registerEvents(new CommandEvent(), this);
+        pm.registerEvents(new FancyClickEvent(), this);
         
         for (Player player : Bukkit.getOnlinePlayers()) {
-            JoinEvent.setData(this, player);
-        }
-        
-        Files tportConfig = GettingFiles.getFile("TPortConfig");
-        if (!tportConfig.getConfig().contains("biomeTP.searches")) {
-            tportConfig.getConfig().set("biomeTP.searches", 100);
-            tportConfig.saveConfig();
-        }
-        if (!tportConfig.getConfig().contains("tags.list")) {
-            Tag.resetTags();
+            JoinEvent.setData(player);
         }
         
         registerSearchers();
         registerSorters();
-        registerSearchAreas();
+        registerBiomeTPAccuracies();
         
-        if (MetricsCommand.isEnabled()) {
+        if (Features.Feature.Metrics.isEnabled()) {
             Main.getInstance().getLogger().log(Level.INFO, "Enabling metrics. Thank you for enabling metrics, powered by bStats. To view stats use '/tport metrics viewStats'");
             Metrics m = new Metrics(this, 8061);
             m.addCustomChart(new Metrics.AdvancedPie("command_usage", CommandCounter::getData));
             m.addCustomChart(new Metrics.AdvancedPie("biome_searches", BiomeSearchCounter::getData));
             m.addCustomChart(new Metrics.AdvancedPie("feature_searches", FeatureSearchCounter::getData));
             m.addCustomChart(new Metrics.SimplePie("tport_version", () -> this.getDescription().getVersion()));
-            m.addCustomChart(new Metrics.SimplePie("public_enabled", () -> (Public.isEnabled() ? "True" : "False")));
+            m.addCustomChart(new Metrics.SimplePie("public_enabled", () -> (Features.Feature.PublicTP.isEnabled() ? "True" : "False")));
             m.addCustomChart(new Metrics.SimplePie("permissions_enabled", () -> (PermissionHandler.isPermissionEnabled() ? "True" : "False")));
             m.addCustomChart(new Metrics.SimplePie("dynmap_enabled", () -> (DynmapHandler.isEnabled() ? "True" : "False")));
         }
-        
-        DynmapHandler.enable();
     }
     
     @Override
@@ -313,89 +418,39 @@ public class Main extends JavaPlugin {
         DynmapHandler.disable();
     }
     
+    @SuppressWarnings("CommentedOutCode")
     private void registerBiomeTPPresets() {
         BiomeTP.BiomeTPPresets.registerPreset("Land", Arrays.asList(
-                Biome.OCEAN, Biome.WARM_OCEAN, Biome.LUKEWARM_OCEAN,
-                Biome.COLD_OCEAN, Biome.FROZEN_OCEAN, Biome.DEEP_OCEAN,
-                Biome.DEEP_WARM_OCEAN, Biome.DEEP_LUKEWARM_OCEAN,
-                Biome.DEEP_COLD_OCEAN, Biome.DEEP_FROZEN_OCEAN,
-                Biome.RIVER, Biome.FROZEN_RIVER
-        ), false, Material.DIRT);
-        
-        BiomeTP.BiomeTPPresets.registerPreset("Water", Arrays.asList(
-                Biome.OCEAN, Biome.WARM_OCEAN, Biome.LUKEWARM_OCEAN,
-                Biome.COLD_OCEAN, Biome.FROZEN_OCEAN, Biome.DEEP_OCEAN,
-                Biome.DEEP_WARM_OCEAN, Biome.DEEP_LUKEWARM_OCEAN,
-                Biome.DEEP_COLD_OCEAN, Biome.DEEP_FROZEN_OCEAN,
-                Biome.RIVER, Biome.FROZEN_RIVER
-        ), true, Material.WATER_BUCKET);
-        
-        BiomeTP.BiomeTPPresets.registerPreset("The_End", Arrays.asList(
-                Biome.END_BARRENS, Biome.END_HIGHLANDS, Biome.END_MIDLANDS, Biome.THE_END, Biome.SMALL_END_ISLANDS),
-                true, Material.END_STONE);
-        
-        BiomeTP.BiomeTPPresets.registerPreset("Savannah", Arrays.asList(
-                Biome.SAVANNA, Biome.SAVANNA_PLATEAU, Biome.SHATTERED_SAVANNA, Biome.SHATTERED_SAVANNA_PLATEAU),
-                true, Material.ACACIA_PLANKS);
-        
-        BiomeTP.BiomeTPPresets.registerPreset("Taiga", Arrays.asList(
-                Biome.TAIGA,
-                Biome.TAIGA_HILLS,
-                Biome.TAIGA_MOUNTAINS,
-                Biome.SNOWY_TAIGA,
-                Biome.SNOWY_TAIGA_MOUNTAINS
-                ),
-                true, Material.SPRUCE_PLANKS);
-        
-        BiomeTP.BiomeTPPresets.registerPreset("Giant_Taiga", Arrays.asList(
-                Biome.GIANT_TREE_TAIGA,
-                Biome.GIANT_TREE_TAIGA_HILLS,
-                Biome.GIANT_SPRUCE_TAIGA,
-                Biome.GIANT_SPRUCE_TAIGA_HILLS
-                ),
-                true, Material.SPRUCE_LOG);
-        
-        BiomeTP.BiomeTPPresets.registerPreset("Mushroom", Arrays.asList(
-                Biome.MUSHROOM_FIELDS, Biome.MUSHROOM_FIELD_SHORE),
-                true, Material.RED_MUSHROOM_BLOCK);
-        
-        BiomeTP.BiomeTPPresets.registerPreset("Jungle", Arrays.asList(
-                Biome.JUNGLE, Biome.JUNGLE_EDGE, Biome.JUNGLE_HILLS,
-                Biome.BAMBOO_JUNGLE, Biome.MODIFIED_JUNGLE, Biome.BAMBOO_JUNGLE_HILLS,
-                Biome.MODIFIED_JUNGLE_EDGE),
-                true, Material.JUNGLE_PLANKS);
-        
-        BiomeTP.BiomeTPPresets.registerPreset("Badlands", Arrays.asList(
-                Biome.BADLANDS, Biome.BADLANDS_PLATEAU, Biome.ERODED_BADLANDS,
-                Biome.MODIFIED_BADLANDS_PLATEAU, Biome.MODIFIED_WOODED_BADLANDS_PLATEAU,
-                Biome.WOODED_BADLANDS_PLATEAU),
-                true, Material.TERRACOTTA);
-        
-        BiomeTP.BiomeTPPresets.registerPreset("Birch", Arrays.asList(
-                Biome.BIRCH_FOREST, Biome.BIRCH_FOREST_HILLS,
-                Biome.TALL_BIRCH_FOREST, Biome.TALL_BIRCH_HILLS),
-                true, Material.BIRCH_PLANKS);
-        
-        BiomeTP.BiomeTPPresets.registerPreset("Nether", Arrays.asList(
-                Biome.NETHER_WASTES, Biome.BASALT_DELTAS,
-                Biome.CRIMSON_FOREST, Biome.WARPED_FOREST, Biome.SOUL_SAND_VALLEY),
-                true, Material.NETHERRACK);
-        
-        BiomeTP.BiomeTPPresets.registerPreset("Mountains", Arrays.asList(
-                Biome.MOUNTAINS, Biome.MOUNTAIN_EDGE,
-                Biome.MODIFIED_GRAVELLY_MOUNTAINS, Biome.GRAVELLY_MOUNTAINS),
-                true, Material.STONE);
-        
-        BiomeTP.BiomeTPPresets.registerPreset("Swamp", Arrays.asList(
-                Biome.SWAMP, Biome.SWAMP_HILLS),
-                true, Material.LILY_PAD);
-        
-        BiomeTP.BiomeTPPresets.registerPreset("Desert", Arrays.asList(
-                Biome.DESERT, Biome.DESERT, Biome.DESERT_LAKES),
-                true, Material.SAND);
+                "OCEAN", "WARM_OCEAN", "LUKEWARM_OCEAN",
+                "COLD_OCEAN", "FROZEN_OCEAN", "DEEP_OCEAN",
+                "DEEP_LUKEWARM_OCEAN",
+                "DEEP_COLD_OCEAN", "DEEP_FROZEN_OCEAN",
+                "RIVER", "FROZEN_RIVER"
+        ), false, Material.GRASS_BLOCK);
 
+        BiomeTP.BiomeTPPresets.registerPreset("Water", Arrays.asList(
+                "OCEAN", "WARM_OCEAN", "LUKEWARM_OCEAN",
+                "COLD_OCEAN", "FROZEN_OCEAN", "DEEP_OCEAN",
+                "DEEP_LUKEWARM_OCEAN",
+                "DEEP_COLD_OCEAN", "DEEP_FROZEN_OCEAN",
+                "RIVER", "FROZEN_RIVER"
+        ), true, Material.WATER_BUCKET);
+
+        BiomeTP.BiomeTPPresets.registerPreset("The_End", Arrays.asList(
+                "END_BARRENS", "END_HIGHLANDS", "END_MIDLANDS", "THE_END", "SMALL_END_ISLANDS"),
+                true, Material.END_STONE);
+
+        BiomeTP.BiomeTPPresets.registerPreset("Nether", Arrays.asList(
+                        "NETHER_WASTES", "BASALT_DELTAS",
+                        "CRIMSON_FOREST", "WARPED_FOREST", "SOUL_SAND_VALLEY"),
+                true, Material.NETHERRACK);
+
+        BiomeTP.BiomeTPPresets.registerPreset("Trees", Arrays.asList(
+                "FOREST", "WINDSWEPT_FOREST", "DARK_FOREST", "SAVANNA", "SAVANNA_PLATEAU", "WINDSWEPT_SAVANNA", "JUNGLE", "SPARSE_JUNGLE", "BIRCH_FOREST", "OLD_GROWTH_BIRCH_FOREST", "TAIGA", "OLD_GROWTH_SPRUCE_TAIGA", "OLD_GROWTH_PINE_TAIGA"),
+                true, Material.OAK_WOOD);
+        
 //        BiomeTP.BiomeTPPresets.registerPreset("name", Arrays.asList(
-//                null),
+//                "biome names"),
 //                true, Material.STONE);
     }
     
@@ -403,7 +458,7 @@ public class Main extends JavaPlugin {
         {
             EmptyCommand emptyTPortModeQuery = new EmptyCommand();
             emptyTPortModeQuery.setCommandName("query", ArgumentType.REQUIRED);
-            emptyTPortModeQuery.setCommandDescription(textComponent("This command is used to search TPorts by their name", infoColor));
+            emptyTPortModeQuery.setCommandDescription(formatInfoTranslation("tport.command.search.tport.commandDescription"));
             
             EmptyCommand emptyTPortMode = new EmptyCommand();
             emptyTPortMode.setCommandName("mode", ArgumentType.REQUIRED);
@@ -421,12 +476,12 @@ public class Main extends JavaPlugin {
                 if (args.length == 4) {
                     Search.SearchMode searchMode = Search.SearchMode.get(args[2]);
                     if (searchMode == null) {
-                        sendErrorTheme(player, "Search mode %s does not exist", args[2]);
+                        sendErrorTranslation(player, "tport.command.search.tport.modeNotExist", args[2]);
                         return;
                     }
                     TPortInventories.openSearchGUI(player, 0, searchMode, "TPort", args[3]);
                 } else {
-                    sendErrorTheme(player, "Usage: %s", "/tport search TPort <mode> <TPort name>");
+                    sendErrorTranslation(player, "tport.command.wrongUsage","/tport search TPort <mode> <TPort name>");
                 }
             }));
             emptyTPort.addAction(emptyTPortMode);
@@ -447,7 +502,7 @@ public class Main extends JavaPlugin {
         {
             EmptyCommand emptyDescriptionModeQuery = new EmptyCommand();
             emptyDescriptionModeQuery.setCommandName("query", ArgumentType.REQUIRED);
-            emptyDescriptionModeQuery.setCommandDescription(textComponent("This command is used to search TPorts by their description", infoColor));
+            emptyDescriptionModeQuery.setCommandDescription(formatInfoTranslation("tport.command.search.description.commandDescription"));
             emptyDescriptionModeQuery.setLooped(true);
             
             EmptyCommand emptyDescriptionMode = new EmptyCommand();
@@ -466,12 +521,12 @@ public class Main extends JavaPlugin {
                 if (args.length >= 4) {
                     Search.SearchMode searchMode = Search.SearchMode.get(args[2]);
                     if (searchMode == null) {
-                        sendErrorTheme(player, "Search mode %s does not exist", args[2]);
+                        sendErrorTranslation(player, "tport.command.search.description.modeNotExist", args[2]);
                         return;
                     }
                     TPortInventories.openSearchGUI(player, 0, searchMode, "description", StringUtils.join(args, " ", 3, args.length));
                 } else {
-                    sendErrorTheme(player, "Usage: %s", "/tport search description <mode> <TPort description...>");
+                    sendErrorTranslation(player, "tport.command.wrongUsage","/tport search description <mode> <TPort description...>");
                 }
             }));
             emptyDescription.addAction(emptyDescriptionMode);
@@ -492,7 +547,7 @@ public class Main extends JavaPlugin {
         {
             EmptyCommand emptyPlayerModeQuery = new EmptyCommand();
             emptyPlayerModeQuery.setCommandName("query", ArgumentType.REQUIRED);
-            emptyPlayerModeQuery.setCommandDescription(textComponent("This command is used to search players by their name", infoColor));
+            emptyPlayerModeQuery.setCommandDescription(formatInfoTranslation("tport.command.search.player.commandDescription"));
             emptyPlayerModeQuery.setLooped(true);
             
             EmptyCommand emptyPlayerMode = new EmptyCommand();
@@ -511,12 +566,12 @@ public class Main extends JavaPlugin {
                 if (args.length == 4) {
                     Search.SearchMode searchMode = Search.SearchMode.get(args[2]);
                     if (searchMode == null) {
-                        sendErrorTheme(player, "Search mode %s does not exist", args[2]);
+                        sendErrorTranslation(player, "tport.command.search.player.modeNotExist", args[2]);
                         return;
                     }
                     TPortInventories.openSearchGUI(player, 0, searchMode, "player", args[3]);
                 } else {
-                    sendErrorTheme(player, "Usage: %s", "/tport search player <mode> <player>");
+                    sendErrorTranslation(player, "tport.command.wrongUsage","/tport search player <mode> <player>");
                 }
             }));
             emptyPlayer.addAction(emptyPlayerMode);
@@ -540,12 +595,12 @@ public class Main extends JavaPlugin {
                 }
             };
             emptyCanTP.setCommandName("canTP", ArgumentType.FIXED);
-            emptyCanTP.setCommandDescription(textComponent("This command is used to search TPorts you can teleport to", infoColor));
+            emptyCanTP.setCommandDescription(formatInfoTranslation("tport.command.search.canTP.commandDescription"));
             emptyCanTP.setRunnable(((args, player) -> {
                 if (args.length == 2) {
                     TPortInventories.openSearchGUI(player, 0, null, "canTP", "");
                 } else {
-                    sendErrorTheme(player, "Usage: %s", "/tport search canTP");
+                    sendErrorTranslation(player, "tport.command.wrongUsage","/tport search canTP");
                 }
             }));
             
@@ -553,7 +608,7 @@ public class Main extends JavaPlugin {
                 ArrayList<ItemStack> list = new ArrayList<>();
                 for (String uuid : GettingFiles.getFile("TPortData").getKeys("tport")) {
                     for (TPort tport : TPortManager.getTPortList(UUID.fromString(uuid))) {
-                        if (tport.canTeleport(player, false, false)) {
+                        if (tport.canTeleport(player, false, false, false)) {
                             list.add(TPortInventories.toTPortItem(tport, player, true));
                         }
                     }
@@ -565,10 +620,10 @@ public class Main extends JavaPlugin {
         {
             EmptyCommand emptyBiomeBiome = new EmptyCommand();
             emptyBiomeBiome.setCommandName("biome", ArgumentType.REQUIRED);
-            emptyBiomeBiome.setCommandDescription(textComponent("This command is used to search TPorts by their biome", infoColor));
+            emptyBiomeBiome.setCommandDescription(formatInfoTranslation("tport.command.search.biome.commandDescription"));
             emptyBiomeBiome.setTabRunnable(((args, player) -> {
-                List<String> biomeList = Arrays.asList(args).subList(2, args.length).stream().map(String::toUpperCase).collect(Collectors.toList());
-                return Arrays.stream(Biome.values()).filter(biome -> !biomeList.contains(biome.name())).map(Enum::name).collect(Collectors.toList());
+                List<String> biomeList = Arrays.asList(args).subList(2, args.length).stream().map(String::toUpperCase).toList();
+                return Arrays.stream(Biome.values()).map(Enum::name).filter(name -> !biomeList.contains(name)).collect(Collectors.toList());
             }));
             emptyBiomeBiome.setLooped(true);
             
@@ -588,13 +643,13 @@ public class Main extends JavaPlugin {
                             Biome.valueOf(args[i].toUpperCase());
                             str.append(args[i]).append(" ");
                         } catch (IllegalArgumentException iae) {
-                            sendErrorTheme(player, "Biome %s does not exist", args[i].toUpperCase());
+                            sendErrorTranslation(player, "tport.command.search.biome.biomeNotExist", args[i].toUpperCase());
                             return;
                         }
                     }
                     TPortInventories.openSearchGUI(player, 0, null, "biome", str.toString().trim());
                 } else {
-                    sendErrorTheme(player, "Usage: %s", "/tport search biome <biome...>");
+                    sendErrorTranslation(player, "tport.command.wrongUsage","/tport search biome <biome...>");
                 }
             }));
             emptyBiome.addAction(emptyBiomeBiome);
@@ -613,50 +668,50 @@ public class Main extends JavaPlugin {
         } //biome
         
         {
-            EmptyCommand emptyBiomeBiome = new EmptyCommand();
-            emptyBiomeBiome.setCommandName("preset", ArgumentType.REQUIRED);
-            emptyBiomeBiome.setCommandDescription(textComponent("This command is used to search TPorts by their biome", infoColor));
+            EmptyCommand emptyPresetPreset = new EmptyCommand();
+            emptyPresetPreset.setCommandName("preset", ArgumentType.REQUIRED);
+            emptyPresetPreset.setCommandDescription(formatInfoTranslation("tport.command.search.biomePreset.commandDescription"));
             
-            EmptyCommand emptyDimension = new EmptyCommand() {
+            EmptyCommand emptyPreset = new EmptyCommand() {
                 @Override
                 public String getName(String argument) {
                     return getCommandName();
                 }
             };
-            emptyDimension.setCommandName("biomePreset", ArgumentType.FIXED);
-            emptyDimension.setTabRunnable(((args, player) -> BiomeTP.BiomeTPPresets.getNames()));
-            emptyDimension.setRunnable(((args, player) -> {
+            emptyPreset.setCommandName("biomePreset", ArgumentType.FIXED);
+            emptyPreset.setTabRunnable(((args, player) -> BiomeTP.BiomeTPPresets.getNames()));
+            emptyPreset.setRunnable(((args, player) -> {
                 if (args.length == 3) {
-                    BiomeTP.BiomeTPPresets.Preset preset = BiomeTP.BiomeTPPresets.getPreset(args[2]);
+                    BiomeTP.BiomeTPPresets.BiomePreset preset = BiomeTP.BiomeTPPresets.getPreset(args[2], player.getWorld());
                     if (preset != null) {
                         TPortInventories.openSearchGUI(player, 0, null, "biomePreset", args[2]);
                     } else {
-                        sendErrorTheme(player, "Preset %s does not exist", args[2]);
+                        sendErrorTranslation(player, "tport.command.search.biomePreset.presetNotExist", args[2]);
                     }
                 } else {
-                    sendErrorTheme(player, "Usage: %s", "/tport search biomePreset <preset>");
+                    sendErrorTranslation(player, "tport.command.wrongUsage","/tport search biomePreset <preset>");
                 }
             }));
-            emptyDimension.addAction(emptyBiomeBiome);
+            emptyPreset.addAction(emptyPresetPreset);
             
             Search.Searchers.addSearcher((searchMode, query, player) -> {
                 ArrayList<ItemStack> list = new ArrayList<>();
                 for (String uuid : GettingFiles.getFile("TPortData").getKeys("tport")) {
                     for (TPort tport : TPortManager.getTPortList(UUID.fromString(uuid))) {
                         //noinspection ConstantConditions, command checks if available
-                        if (BiomeTP.BiomeTPPresets.getPreset(query).getBiomes().contains(tport.getBiome())) {
+                        if (BiomeTP.BiomeTPPresets.getPreset(query, tport.getLocation().getWorld()).biomes().stream().anyMatch(b -> b.equalsIgnoreCase(tport.getBiome().name()))) {
                             list.add(TPortInventories.toTPortItem(tport, player, true));
                         }
                     }
                 }
                 return list;
-            }, emptyDimension);
+            }, emptyPreset);
         } //biomePreset
         
         {
             EmptyCommand emptyDimensionDimension = new EmptyCommand();
             emptyDimensionDimension.setCommandName("dimension", ArgumentType.REQUIRED);
-            emptyDimensionDimension.setCommandDescription(textComponent("This command is used to search TPorts by their dimension", infoColor));
+            emptyDimensionDimension.setCommandDescription(formatInfoTranslation("tport.command.search.dimension.commandDescription"));
             
             EmptyCommand emptyDimension = new EmptyCommand() {
                 @Override
@@ -672,10 +727,10 @@ public class Main extends JavaPlugin {
                         World.Environment.valueOf(args[2].toUpperCase());
                         TPortInventories.openSearchGUI(player, 0, null, "dimension", args[2]);
                     } catch (IllegalArgumentException iae) {
-                        sendErrorTheme(player, "Environment %s does not exist", args[2].toUpperCase());
+                        sendErrorTranslation(player, "tport.command.search.dimension.dimensionNotExist", args[2].toUpperCase());
                     }
                 } else {
-                    sendErrorTheme(player, "Usage: %s", "/tport search dimension <dimension>");
+                    sendErrorTranslation(player, "tport.command.wrongUsage","/tport search dimension <dimension>");
                 }
             }));
             emptyDimension.addAction(emptyDimensionDimension);
@@ -696,7 +751,7 @@ public class Main extends JavaPlugin {
         {
             EmptyCommand emptyTagTag = new EmptyCommand();
             emptyTagTag.setCommandName("tag", ArgumentType.REQUIRED);
-            emptyTagTag.setCommandDescription(textComponent("This command is used to search TPorts by their tag", infoColor));
+            emptyTagTag.setCommandDescription(formatInfoTranslation("tport.command.search.tag.commandDescription"));
             
             EmptyCommand emptyTag = new EmptyCommand() {
                 @Override
@@ -711,13 +766,13 @@ public class Main extends JavaPlugin {
                     String tag = Tag.getTag(args[2]);
                     
                     if (tag == null) {
-                        sendErrorTheme(player, "Tag %s does not exist", args[2]);
+                        sendErrorTranslation(player, "tport.command.search.tag.tagNotExist", args[2]);
                         return;
                     }
                     
                     TPortInventories.openSearchGUI(player, 0, null, emptyTag.getCommandName(), tag);
                 } else {
-                    sendErrorTheme(player, "Usage: %s", "/tport search tag <tag>");
+                    sendErrorTranslation(player, "tport.command.wrongUsage", "/tport search tag <tag>");
                 }
             }));
             emptyTag.addAction(emptyTagTag);
@@ -745,173 +800,25 @@ public class Main extends JavaPlugin {
                 return item1.getItemMeta().getDisplayName().compareToIgnoreCase(item2.getItemMeta().getDisplayName());
             }).collect(Collectors.toList());
             
-        }, new Message(textComponent("This sorter sorts all players alphabetically according to their name", infoColor)));
+        }, formatInfoTranslation("tport.main.sorter.alphabet.description"));
         
         Sort.addSorter("oldest", (player) -> {
             Files tportData = GettingFiles.getFile("TPortData");
             ArrayList<String> playerList = new ArrayList<>(tportData.getKeys("tport"));
             return playerList.stream().map(playerUUID -> getOrDefault(getHead(UUID.fromString(playerUUID), player), new ItemStack(Material.AIR))).collect(Collectors.toList());
-        }, new Message(textComponent("This sorter sorts the oldest players first", infoColor)));
+        }, formatInfoTranslation("tport.main.sorter.oldest.description"));
         
         Sort.addSorter("newest", (player) -> {
             Files tportData = GettingFiles.getFile("TPortData");
             ArrayList<String> playerList = new ArrayList<>(tportData.getKeys("tport"));
             Collections.reverse(playerList);
             return playerList.stream().map(playerUUID -> getOrDefault(getHead(UUID.fromString(playerUUID), player), new ItemStack(Material.AIR))).collect(Collectors.toList());
-        }, new Message(textComponent("This sorter sorts the newest players first", infoColor)));
+        }, formatInfoTranslation("tport.main.sorter.newest.description"));
     }
     
-    private void registerSearchAreas() {
-        {
-            EmptyCommand emptyWorldborder = new EmptyCommand() {
-                @Override
-                public String getName(String argument) {
-                    return getCommandName();
-                }
-            };
-            emptyWorldborder.setCommandName("worldborder", ArgumentType.FIXED);
-            emptyWorldborder.setRunnable(((args, player) -> {
-//                SearchArea.SearchAreaHandler.getArea("worldborder").get(player);
-            }));
-            
-            SearchAreaHandler.addAreaHandler(((player) -> {
-                World world = player.getWorld();
-                Location center = world.getWorldBorder().getCenter();
-                int size = (int) (world.getWorldBorder().getSize() / 2);
-                
-                Polygon polygon = new Polygon();
-                
-                polygon.addPoint(center.getBlockX() - size, center.getBlockZ() + size);
-                polygon.addPoint(center.getBlockX() + size, center.getBlockZ() + size);
-                polygon.addPoint(center.getBlockX() + size, center.getBlockZ() - size);
-                polygon.addPoint(center.getBlockX() - size, center.getBlockZ() - size);
-                
-                return polygon;
-            }), emptyWorldborder);
-        } //world border
-        
-        {
-            EmptyCommand emptyPermission = new EmptyCommand() {
-                @Override
-                public String getName(String argument) {
-                    return getCommandName();
-                }
-            };
-            emptyPermission.setCommandName("permission", ArgumentType.FIXED);
-            emptyPermission.setRunnable(((args, player) -> {
-//                SearchArea.SearchAreaHandler.getArea("worldborder").get(player);
-            }));
-            
-            SearchAreaHandler.addAreaHandler(((player) -> {
-                World world = player.getWorld();
-                String worldName = world.getName();
-                
-                label:
-                if (player.getEffectivePermissions().stream().anyMatch(p -> p.getPermission().equalsIgnoreCase("TPort.searchArea.subType.polygon"))) {
-                    HashMap<Integer, Pair<Integer, Integer>> prePolygon = new HashMap<>();
-                    
-                    for (PermissionAttachmentInfo permission : player.getEffectivePermissions()) {
-                        if (permission.getPermission().toLowerCase().matches("(?i)tport\\.searcharea\\.data\\." + worldName + "\\.\\d+\\.x\\.[-+]?\\d+")) {
-                            int corner = Integer.parseInt(permission.getPermission().substring(23 + worldName.length()).split("\\.x")[0]);
-                            int x = Integer.parseInt(permission.getPermission().split("(?i)tport\\.searcharea\\.data\\." + worldName + "\\.\\d+\\.x\\.")[1]);
-                            
-                            if (prePolygon.containsKey(corner)) {
-                                Pair<Integer, Integer> preCorner = prePolygon.get(corner);
-                                preCorner.setLeft(x);
-                                prePolygon.put(corner, preCorner);
-                            } else {
-                                prePolygon.put(corner, new Pair<>(x, null));
-                            }
-                        }
-                        if (permission.getPermission().toLowerCase().matches("(?i)tport\\.searcharea\\.data\\." + worldName + "\\.\\d+\\.z\\.[-+]?\\d+")) {
-                            int corner = Integer.parseInt(permission.getPermission().substring(23 + worldName.length()).split("\\.z")[0]);
-                            int z = Integer.parseInt(permission.getPermission().split("(?i)tport\\.searcharea\\.data\\." + worldName + "\\.\\d+\\.z\\.")[1]);
-                            
-                            if (prePolygon.containsKey(corner)) {
-                                Pair<Integer, Integer> preCorner = prePolygon.get(corner);
-                                preCorner.setRight(z);
-                                prePolygon.put(corner, preCorner);
-                            } else {
-                                prePolygon.put(corner, new Pair<>(null, z));
-                            }
-                        }
-                    }
-                    
-                    Polygon polygon = new Polygon();
-                    for (int corner = 1; corner <= prePolygon.size(); corner++) {
-                        if (prePolygon.containsKey(corner)) {
-                            Pair<Integer, Integer> loc = prePolygon.get(corner);
-                            if (loc.getLeft() != null && loc.getRight() != null) {
-                                polygon.addPoint(loc.getLeft(), loc.getRight());
-                            } else {
-                                //error, polygon point not complete
-                                break label;
-                            }
-                        } else {
-                            //error, polygon corners not complete
-                            break label;
-                        }
-                    }
-                    return polygon;
-                }
-                
-                Location center = world.getWorldBorder().getCenter();
-                int size = (int) (world.getWorldBorder().getSize() / 2);
-                Polygon polygon = new Polygon();
-                
-                polygon.addPoint(center.getBlockX() - size, center.getBlockZ() + size);
-                polygon.addPoint(center.getBlockX() + size, center.getBlockZ() + size);
-                polygon.addPoint(center.getBlockX() + size, center.getBlockZ() - size);
-                polygon.addPoint(center.getBlockX() - size, center.getBlockZ() - size);
-                
-                return polygon;
-            }), emptyPermission);
-        } //permission
-        
-        {
-            EmptyCommand emptyWorldCornerSetXY = new EmptyCommand();
-            emptyWorldCornerSetXY.setCommandName("y", ArgumentType.REQUIRED);
-            emptyWorldCornerSetXY.setLinked();
-            EmptyCommand emptyWorldCornerSetX = new EmptyCommand();
-            emptyWorldCornerSetX.setCommandName("x", ArgumentType.REQUIRED);
-            emptyWorldCornerSetX.addAction(emptyWorldCornerSetXY);
-            emptyWorldCornerSetX.setLinked();
-            EmptyCommand emptyWorldCornerSet = new EmptyCommand();
-            emptyWorldCornerSet.setCommandName("set", ArgumentType.OPTIONAL);
-            
-            emptyWorldCornerSet.addAction(emptyWorldCornerSetX);
-            EmptyCommand emptyWorldCornerGet = new EmptyCommand();
-            emptyWorldCornerGet.setCommandName("get", ArgumentType.OPTIONAL);
-            EmptyCommand emptyWorldCornerRemove = new EmptyCommand();
-            emptyWorldCornerRemove.setCommandName("remove", ArgumentType.OPTIONAL);
-            
-            EmptyCommand emptyWorldCorner = new EmptyCommand();
-            emptyWorldCorner.setCommandName("corner", ArgumentType.REQUIRED);
-            emptyWorldCorner.addAction(emptyWorldCornerSet);
-            emptyWorldCorner.addAction(emptyWorldCornerGet);
-            emptyWorldCorner.addAction(emptyWorldCornerRemove);
-            
-            EmptyCommand emptyWorld = new EmptyCommand();
-            emptyWorld.setCommandName("world", ArgumentType.REQUIRED);
-            emptyWorld.addAction(emptyWorldCorner);
-            
-            EmptyCommand emptyPolygon = new EmptyCommand() {
-                @Override
-                public String getName(String argument) {
-                    return getCommandName();
-                }
-            };
-            emptyPolygon.setCommandName("polygon", ArgumentType.FIXED);
-            emptyPolygon.addAction(emptyWorld);
-            
-            SearchAreaHandler.addAreaHandler(((player) -> { //todo
-                Polygon polygon = new Polygon();
-                polygon.addPoint(2999808, -9000448);
-                polygon.addPoint(9000447, -9000448);
-                polygon.addPoint(9000447, 9000447);
-                polygon.addPoint(2999808, 9000447);
-                return polygon;
-            }), emptyPolygon);
-        } //polygon
+    private void registerBiomeTPAccuracies() {
+        Accuracy.createAccuracy("default", 6400, 8, Arrays.asList(200, 0));
+        Accuracy.createAccuracy("fine", 4800, 6, Arrays.asList(200, 100, 0, -30));
+        Accuracy.createAccuracy("fast", 6400, 8, List.of(100));
     }
 }
